--- a/src/main/resources/templates/albums.html
+++ b/src/main/resources/templates/albums.html
@@ -14,6 +14,36 @@
             <p>Song count: <span th:text="${album.songCount}"></span></p>
             <p>Length: <span th:text="${album.length}"></span> seconds</p>
             <img th:src="${album.imageUrl}" alt="Album cover" class="img-fluid">
+            <ul>
+                <li th:each="song : ${album.songs}">
+                    <h3 th:text="${song.title}"></h3>
+                    <p>Track Number: <span th:text="${song.trackNumber}"></span></p>
+                    <p>Length: <span th:text="${song.length}"></span> seconds</p>
+                </li>
+            </ul>
+            <div class="mt-3">
+                <form th:action="@{/albums/{id}/songs(id=${album.id})}" method="POST">
+                    <fieldset>
+                        <legend>Add a song</legend>
+                        <div class="mb-3">
+                            <label class="form-label">Title</label>
+                            <input type="text" name="songTitle" class="form-control">
+                        </div>
+                        <div class="mb-3">
+                            <label class="form-label">Length</label>
+                            <input type="number" name="length" class="form-control">
+                        </div>
+                        <div class="mb-3">
+                            <label class="form-label">Track Number</label>
+                            <input type="number" name="trackNumber" class="form-control">
+                        </div>
+                        <div class="form-group">
+                            <input type="submit" class="btn btn-primary" value="Add Song">
+                        </div>
+                    </fieldset>
+                </form>
+
+            </div>
         </li>
     </ul>
 </div>
@@ -50,4 +80,3 @@
 </div>
 </body>
 </html>
-
